environments/development/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicare-backend
  namespace: medicare
  labels:
    app: medicare-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medicare-backend
  template:
    metadata:
      labels:
        app: medicare-backend
    spec:
      containers:
        - name: medicare-backend
          image: 788365607408.dkr.ecr.us-east-1.amazonaws.com/medicare-backend:e417cc694476c7c06627cff24da750235f5999aa
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: medicare-backend
  namespace: medicare
  labels:
    app: medicare-backend
spec:
  type: ClusterIP
  selector:
    app: medicare-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
