environments/development/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicare-frontend
  namespace: medicare
  labels:
    app: medicare-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medicare-frontend
  template:
    metadata:
      labels:
        app: medicare-frontend
    spec:
      containers:
        - name: medicare-frontend
          image: 788365607408.dkr.ecr.us-east-1.amazonaws.com/medicare-frontend:e417cc694476c7c06627cff24da750235f5999aa
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: medicare-frontend
  namespace: medicare
  labels:
    app: medicare-frontend
spec:
  type: ClusterIP
  selector:
    app: medicare-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
